# ml_study

./: README.md
basic/: pyproject.toml
basic/basic/: linear.py  quadratic.py  quadratic_mo.py
ewc/: README.md  demo.ipynb  ewc_gp.ipynb  ewc_gp.py  ewc_mo.py  pyproject.toml
ewc/model/: elastic_weight_consolidation.py  ewc_regression.py
