[tool.poetry]
name = "basic"
version = "0.1.0"
description = ""
authors = ["Po <chenjunfeng@ethstorage.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = { version = "1.12.1", source="torch"}
numpy = "^1.26.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"



[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cpu/"
priority = "supplemental"