[tool.poetry]
name = "overcoming-catastrophic-forgetting-in-neural-networks"
version = "0.1.0"
description = ""
authors = ["Po <chenjunfeng@ethstorage.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.6,<3.7"
torch = "^2.1.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
numpy = "^1.19.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
